--- a/public/files/css/table.css
+++ b/public/files/css/table.css
@@ -1,9 +1,3 @@
-#tableColumn {
-  max-width: 60%;
-  min-width: 60%;
-  margin-left: 20%;
-  
-}
 /*****************************************/
 /**************Table Stuff****************/
 /*****************************************/
@@ -24,7 +18,6 @@ table
   border-collapse: collapse;
   border-style: hidden;
   width: 100%;
-  //background-image: url(http://gps.wrdsb.ca/files/2014/02/TriWorldSchool2Colourlarge.jpg);
   background-position: center;
   background-attachment: fixed;
   background-color: white;
@@ -41,6 +34,10 @@ td {
   background-color: rgba(255,255,255,0.5);
 }
 
+.checked {
+	background-color: rgba(200,200,200,0.7);
+}
+
 td td {
   background-color: transparent;
 }
@@ -50,47 +47,16 @@ td td {
   vertical-align: middle;
 }
 
-.tableColumnRadios input[type="radio"]:checked + label {
-    background-color:rgba(200,200,200,0.7);
-}
-
 .tableColumnRadios input[type="radio"] {
     display:none;
 }
 
-/*Chrome radio handling*/
-
-.Chrome .tableColumnRadios label{
-  padding-left:50px;  
-  padding-top:31px;
-  padding-bottom:50px;
+.tableColumnRadios label{
+	padding-left:50px;  
+	padding-top:32px;
+	padding-bottom:51px;
+	height: 500px;
 }
-
-/*Safari radio handling*/
-
-.Safari .tableColumnRadios input[type="radio"] {
-  padding-left:50px;  
-  padding-top:32px;
-  padding-bottom:51px;
-}
-
-/*IE radio handling*/
-
-.IE .tableColumnRadios label{
-  padding-left:50px;  
-  padding-top:40px;
-  padding-bottom:41px;
-}
-
-/*Firefox radio handling*/
-
-.Firefox .tableColumnRadios label{
-  padding-left:50px;  
-  padding-top:40px;
-  padding-bottom:40px;
-}
-
-/*back to other table stuff*/
 
 .mainEvaluation .tableColumnRadios th , .mainEvaluation .tableColumnRadios td{
   min-width: 50px;
@@ -138,7 +104,7 @@ td td {
 table td, table th {
   border: 2px solid black;
   padding: 0;
-  height: 100px;
+  height: 100%;
 }
 
 .mainEvaluation, .lowOrHigh {
