took svg out of git

--- a/public/files/css/style.css
+++ b/public/files/css/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../image/low-poly-texture-3 39.svg");
+    background-image: url("../image/low-poly-texture-3_39.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
